--- a/my-typescript-app/public/index.html
+++ b/my-typescript-app/public/index.html
@@ -29,15 +29,19 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-app.js"></script>
+    <script>
+      var firebaseConfig = {
+        apiKey: "AIzaSyAKdw0SpXFrKKketfPIYfHcYOdPozY7940",
+        authDomain: "firsttsapp.firebaseapp.com",
+        databaseURL: "https://firsttsapp-default-rtdb.firebaseio.com",
+        projectId: "firsttsapp",
+        storageBucket: "firsttsapp.appspot.com",
+        messagingSenderId: "174598211345",
+        appId: "1:174598211345:web:29d868fc7cd9170ef1eeb0"
+      };
+      firebase.initializeApp(firebaseConfig);
+    </script>
   </body>
 </html>
