[#2] Created connexion form from Firebase using bootstrap

--- a/my-typescript-app/public/index.html
+++ b/my-typescript-app/public/index.html
@@ -30,7 +30,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
-    <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-app.js"></script>
+    <!-- <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-app.js"></script>
     <script>
       var firebaseConfig = {
         apiKey: "AIzaSyAKdw0SpXFrKKketfPIYfHcYOdPozY7940",
@@ -42,6 +42,6 @@
         appId: "1:174598211345:web:29d868fc7cd9170ef1eeb0"
       };
       firebase.initializeApp(firebaseConfig);
-    </script>
+    </script> -->
   </body>
 </html>
